--- a/css/test.css
+++ b/css/test.css
@@ -10,14 +10,16 @@
 .field {
   margin: 10px; }
 
-input[type="text"], input[type="password"] {
+input[type="text"],
+input[type="password"] {
   border: solid #333 1px;
   border-radius: 5px;
   height: 25px;
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   box-shadow: 0px 0px 15px 0px #FFF;
   outline: 0; }
-  input[type="text"]:focus, input[type="password"]:focus {
+  input[type="text"]:focus,
+  input[type="password"]:focus {
     border-color: #66afe9;
     outline: 0;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6); }
@@ -51,5 +53,37 @@ input[type="text"], input[type="password"] {
 
 .help {
   padding: 5px; }
+
+.arrow {
+  width: 0px;
+  height: 0px;
+  border-right: solid 11px black;
+  border-bottom: solid 11px transparent;
+  border-top: solid 11px transparent;
+  position: absolute;
+  top: 10;
+  left: -11px; }
+  .arrow:after {
+    border-right: solid 10px #A00;
+    border-top: solid 10px transparent;
+    border-bottom: solid 10px transparent;
+    content: " ";
+    width: 0px;
+    height: 0px;
+    margin-left: 1px;
+    margin-top: -10px;
+    display: block; }
+
+.tooltip {
+  background-color: #A00;
+  border: solid black 1px;
+  padding: 10px;
+  display: block;
+  position: absolute; }
+
+.tooltip-text {
+  color: #FFF;
+  font-family: sans-serif;
+  font-size: 0.8em; }
 
 /*# sourceMappingURL=test.css.map */
